/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "system/guid.proto";
import "dolittle/timeseries/datapoints/value.proto";

package dolittle.timeseries.datapoints;

option csharp_namespace = "Dolittle.TimeSeries.DataPoints";

message DataPoint {
    guid timeSeries = 1;
    Value value = 2;
    int32 timestamp = 3;
}
