/*---------------------------------------------------------------------------------------------
 *  Copyright (c) Dolittle. All rights reserved.
 *  Licensed under the MIT License. See LICENSE in the project root for license information.
 *--------------------------------------------------------------------------------------------*/
syntax = "proto3";

import "google/protobuf/any.proto";

package dolittle.timeseries.datatypes;

option csharp_namespace = "Dolittle.TimeSeries.DataTypes";

message TagDataPoint {
    string tag = 1;
    google.protobuf.Any value = 2;
}
